# weekly-feedback

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
scripts/: backfill.py  seed_universe.py
src/weekly/: config.py  logging_setup.py  main.py
src/weekly/api/: router.py  schemas.py
src/weekly/api/templates/: dashboard.html
src/weekly/db/: duckdb.py  duckdb_schema.py  models.py  sqlite.py
src/weekly/features/: __init__.py  base.py  candle_anatomy.py  moving_averages.py  registry.py  volatility.py  volume.py
src/weekly/ingestion/: diff.py  engine.py  fetcher.py  universe.py
src/weekly/scheduler/: jobs.py
